fix bug spacing main table content

--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -1,4 +1,4 @@
-table {
+.bookmarks-table {
 	border-collapse:separate !important;
   border-spacing: 0 1em !important;
 }
